--- a/pages/dashboard/Dashboard.module.scss
+++ b/pages/dashboard/Dashboard.module.scss
@@ -1,26 +1,52 @@
-.containerDashboard{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+.containerDsh{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
 }
 
-.tableContainer{
-    width: 100%;
-    margin:10px;
 
-
-
-  th{
-    background-color: red;
-  }
-   th,td{
-    border: 2px solid;
-        text-align: left;
-    }
-  
-    tr:nth-child(even) {background-color: #f2f2f2;}
-
+.containerDashboard{
+    display: grid;
+      grid-template-columns: 550px 550px ;
+  grid-template-rows: auto auto ;
+  gap:1em;
     
+    hr{
+    width: 90%;
+  }
+}
+
+.parintiContainer{
+  display: flex;
+  flex-direction:row ;
+  justify-content: space-between;
+  border:2px dashed gray;
+  padding:1em;
+  margin-bottom:2em;
+}
+.parintiContainerMic{
+  display: flex;
+  flex-direction:column ;
+  
+}
+
+.fratiContainer{
+  display: flex;
+  flex-direction:column ;
+  
+  border:2px dashed gray;
+  padding:1em;
+  margin-bottom:2em;
+}
+
+.detaliiEveniment{
+  display: flex;
+  flex-direction:column ;
+  
+  border:2px dashed gray;
+  padding:1em
 }
 
 .butonTabel{
