--- a/pages/dashboard/Dashboard.module.scss
+++ b/pages/dashboard/Dashboard.module.scss
@@ -9,11 +9,11 @@
 
 .containerDashboard{
     display: grid;
-      grid-template-columns: 550px 550px ;
-  grid-template-rows: auto auto ;
-  gap:1em;
+    grid-template-columns: 550px 550px ;
+    grid-template-rows: auto auto ;
+    gap:1em;
     
-    hr{
+      hr{
     width: 90%;
   }
 }
@@ -62,14 +62,21 @@
   width: 80px;
   height: 80px;
   animation: spin 1s linear infinite;
+  
 
 }
 .loaderContainer{
   display:flex;
+  
   width:100%;
   height:100vh;
   align-items: center;
   justify-content: center;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
 }
 
  @keyframes spin {
