--- a/pages/dashboard/Dashboard.module.scss
+++ b/pages/dashboard/Dashboard.module.scss
@@ -68,15 +68,12 @@
 .loaderContainer{
   display:flex;
   
-  width:100%;
+  width:100vw;
   height:100vh;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
+  position: relative;
+justify-self: center;
 }
 
  @keyframes spin {
