--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -1,35 +1,64 @@
-.headerContainer{
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height:90px;
-    padding:20px;
-    padding-left:50px;
-    padding-right:50px;
-    background-color: aliceblue;
-    
-    a{
-        box-shadow: inset 0 0 0 0 #54b3d6;
-        color: #54b3d6;
-        margin: 0 -.25rem;
-        padding: 0 .25rem;
-        transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
-        &:hover {
-            box-shadow: inset 100px 0 0 0 #54b3d6;
-            color: white;
-        }
+.headerContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 140px;
+  padding: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
+
+  div {
+    width: 33%;
+  }
+  a {
+    box-shadow: inset 0 0 0 0 #e91e63;
+    color: #e91e63;
+    margin: 0 -0.25rem;
+    padding: 0 0.25rem;
+    transition: color 2s ease-in-out, box-shadow 1s ease-in-out;
+    border-radius: 0.6em;
+    &:hover {
+      box-shadow: inset 100vw 0 0 0 #ddfcf1;
+      border-radius: 0.6em;
+      color: #e91e63;
     }
+  }
 }
 
-.board{
-    display: flex;
-    flex-direction: row;
-    width: 50%;
-    justify-content: space-between;
-    align-items: center;
-    
-    div{
-        margin:15px
-    }
+.board {
+  display: flex;
+  flex-direction: row;
+
+  justify-content: flex-end;
+  align-items: center;
+
+  a {
+    margin: 15px;
+  }
+}
+.titlu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  h1 {
+    position: relative;
+    font-family: "Avenir Next", sans-serif;
+    font-weight: 900;
+    font-size: calc(1em + 1vw);
+    text-transform: uppercase;
+    font-style: italic;
+    letter-spacing: 0.05em;
+    display: inline-block;
+    color: mix(#fff, #e91e63, 85%);
+    text-shadow: -0.0075em 0.0075em 0 mix(#fff, #e91e63, 94%),
+      0.005em 0.005em 0 mix(#fff, #e91e63, 60%),
+      0.01em 0.01em 0 mix(#fff, #e91e63, 62%),
+      0.015em 0.015em mix(#fff, #e91e63, 64%),
+      0.02em 0.02em 0 mix(#fff, #e91e63, 66%),
+      0.025em 0.025em 0 mix(#fff, #e91e63, 68%),
+      0.03em 0.03em 0 mix(#fff, #e91e63, 70%),
+      0.035em 0.035em 0 mix(#fff, #e91e63, 72%);
+  }
 }
