--- a/pages/formular/Formular.module.scss
+++ b/pages/formular/Formular.module.scss
@@ -1,61 +1,87 @@
-.formularContainer{
-    display:flex;
-    width:100%;
-    align-items: center;
-    justify-content: center;
-    
+.formularContainer {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
 
+  input {
+    outline: none;
+    border: 1px solid gray;
+    border-radius: 5px;
+  }
+  label {
+    font-size: 1em;
+  }
 
-
-    input[type="date"] {
+  input[type="date"] {
     font-family: monospace;
     overflow: hidden;
     padding: 10px;
-    font-size:18px;
-    outline:none;
-    border-radius:5px;
-}
-    input[type="time"] {
+    font-size: 18px;
+    outline: none;
+    border-radius: 5px;
+  }
+  input[type="time"] {
     display: -webkit-inline-flex;
     font-family: monospace;
     overflow: hidden;
     padding: 15px;
-    font-size:18px;
-    outline:none;
-    border-radius:5px;
+    font-size: 18px;
+    outline: none;
+    border-radius: 5px;
     background-color: #7155d3;
     border-radius: 15%;
     color: #fff;
     padding: 12px 13px;
-        &::-webkit-datetime-edit-hour-field {
-    background-color: red;
-    border-radius: 15%;
-    padding: 19px 13px;
-}}}
-
-.dateCopil{
-    display: flex;
-    flex-direction: column;
-
-    width:100%;
-    padding:3em;
-}
-.dateEveniment{
-    display: flex;
-    flex-direction: column;
-
-    width:100%;
+    &::-webkit-datetime-edit-hour-field {
+      background-color: red;
+      border-radius: 15%;
+      padding: 19px 13px;
+    }
+  }
 }
 
-.randFormular{
-    width:100%;
-    display: flex;
-    align-items: center;
-    height:40px;
-    justify-content: space-between;
-    
+.dateCopil {
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
+  padding: 1em;
+}
+.dateEveniment {
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
 }
 
+.randFormular {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 40px;
+}
+.randFormularFrati {
+  display: flex;
+  flex-direction: column;
 
-
-
+  height: 10em;
+  padding: 0.5em;
+  button {
+    margin-top: 1em;
+  }
+  label {
+    margin-top: 1em;
+  }
+}
+.frati {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  border: 4px dotted black;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  padding: 2em;
+}
