--- a/pages/formular/Formular.module.scss
+++ b/pages/formular/Formular.module.scss
@@ -3,11 +3,18 @@
   width: 100%;
   align-items: center;
   justify-content: center;
+  text-align: center;
+  form {
+    display: grid;
 
+    gap: 1em;
+  }
   input {
     outline: none;
+    max-width: 10em;
     border: 1px solid gray;
     border-radius: 5px;
+    text-align: center;
   }
   label {
     font-size: 1em;
@@ -42,8 +49,9 @@
 }
 
 .dateCopil {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1em;
 
   width: 100%;
   padding: 1em;
@@ -56,16 +64,20 @@
 }
 
 .randFormular {
-  width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  height: 40px;
+  padding: 0.5em;
+  border-bottom: 1px solid black;
+  label {
+    text-align: center;
+    margin-bottom: 0.2em;
+  }
 }
 .randFormularFrati {
   display: flex;
   flex-direction: column;
-
+  align-items: center;
   height: 10em;
   padding: 0.5em;
   button {
@@ -100,4 +112,13 @@
 .pereche {
   display: grid;
   grid-template-columns: 1fr;
+}
+
+@media (max-width: 768px) {
+  .frati {
+    grid-template-columns: 1fr;
+  }
+  .nasi {
+    grid-template-columns: 1fr;
+  }
 }
