--- a/pages/dashboard/Dashboard.module.scss
+++ b/pages/dashboard/Dashboard.module.scss
@@ -3,13 +3,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .containerDashboard {
   display: grid;
-  grid-template-columns: 550px 550px;
-  grid-template-rows: auto auto;
-  gap: 1em;
+  grid-template-columns: 1fr 1fr 1fr;
+
+  align-items: center;
+  gap: 5em;
+  padding: 1em;
   h1,
   h2,
   h3 {
@@ -106,7 +109,7 @@
   grid-template-columns: 1fr 1fr;
   gap: 1em;
   border: 5px dotted gray;
-  padding:1em;
+  padding: 1em;
   div {
     border: 2px solid black;
   }
