--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -1,13 +1,17 @@
 .headerContainer {
   display: flex;
   flex-direction: row;
-  position: relative;
+  position: fixed;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   height: 140px;
   padding: 20px;
   padding-left: 50px;
   padding-right: 50px;
+  background-color: #e91e63;
+  z-index: 10000;
+  top: 0;
 
   a {
     box-shadow: inset 0 0 0 0 #e91e63;
@@ -24,21 +28,11 @@
   }
 }
 
-.board {
-  display: flex;
-  flex-direction: row;
-
-  justify-content: flex-end;
-  align-items: center;
-
-  a {
-    margin: 15px;
-  }
-}
 .titlu {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 33%;
 
   h1 {
     position: relative;
@@ -60,68 +54,51 @@
       0.035em 0.035em 0 mix(#fff, #e91e63, 72%);
   }
 }
-
-.navMenu {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  flex-direction: row;
-  background-color: antiquewhite;
-  z-index: 1000;
-  margin-left: 1em;
-  margin-right: 1em;
+.logo {
+  width: 33%;
 }
 .navCont {
+  width: 33%;
   display: flex;
-  top: 0;
+  justify-content: flex-end;
+}
+.meniu {
+  position: absolute;
+  left: 0;
+  display: grid;
+  width: 100vw;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  justify-content: center;
+  padding: 0px;
+  z-index: 100;
+  background-color: #e91e63;
+  top: 100%;
 
-  flex-direction: column;
-
-  justify-content: space-between;
-  align-items: flex-end;
-  ul {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
+  div {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    padding: 0px;
-    div {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: left;
+    align-items: center;
+    text-align: left;
 
-      li {
+    li {
+      all: unset;
+      width: 15em;
+      margin: 1em;
+      a {
         all: unset;
-        width: 15em;
-        margin: 1em;
-        a {
-          all: unset;
-          cursor: pointer;
-        }
+        cursor: pointer;
       }
     }
-    hr {
-      height: 100%;
-      width: 2px;
-      color: black;
-    }
   }
-  li {
-    overflow: hidden;
-  }
-  nav {
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 3em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top: 140px;
-    width: 35em;
+  hr {
+    height: 100%;
+    width: 2px;
+    color: black;
   }
 }
+
 @media (max-width: 768px) {
   .headerContainer {
     padding: 0px;
@@ -132,7 +109,37 @@
   }
   .meniu {
     height: 20em;
+    ul {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      align-items: center;
+      justify-content: center;
+      padding: 0px;
+      div {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: left;
+
+        li {
+          all: unset;
+          width: 15em;
+          margin: 1em;
+          a {
+            all: unset;
+            cursor: pointer;
+          }
+        }
+      }
+      hr {
+        height: 100%;
+        width: 2px;
+        color: black;
+      }
+    }
   }
+
   .navCont {
     nav {
       width: 100%;
