--- a/components/formular/Copil.module.scss
+++ b/components/formular/Copil.module.scss
@@ -1,10 +1,64 @@
 .dateCopil {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 1em;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   padding: 1em;
+}
+
+.informatiiCopil {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2em;
+  input[type="date"] {
+    height: 35px;
+    margin: 0 auto;
+    width: 100%;
+    font-family: arial, sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+
+    outline: none;
+    border: 0;
+    border-radius: 3px;
+    padding: 0 3px;
+    color: rgba(0, 0, 0, 0.5);
+
+    &::-webkit-datetime-edit-month-field {
+      color: red;
+    }
+    &::-webkit-datetime-edit-day-field {
+      color: white;
+    }
+    &::-webkit-datetime-edit-year-field {
+      color: blue;
+    }
+
+    &::-webkit-clear-button {
+      font-size: 18px;
+      height: 30px;
+      position: relative;
+      right: 5px;
+      margin-right: 4px;
+    }
+    &::-webkit-inner-spin-button {
+      height: 30px;
+    }
+    &::-webkit-calendar-picker-indicator {
+      font-size: 18px;
+
+      &:hover {
+        background: lighten(#2f2f2f, 40%);
+        color: darken(#fff, 10%);
+        cursor: pointer;
+      }
+      &:active {
+        color: blue;
+      }
+    }
+  }
 }
 
 .randFormular {
@@ -29,9 +83,6 @@
   button {
     margin-top: 1em;
   }
-  label {
-    margin-top: 1em;
-  }
 }
 .frati {
   display: grid;
@@ -42,6 +93,8 @@
   width: 100%;
   height: auto;
   padding: 2em;
+  position: relative;
+  padding-bottom: 7em;
 }
 .frati2 {
   display: grid;
@@ -49,9 +102,10 @@
   border: 4px dotted black;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  max-width: 20em;
   height: auto;
-  padding: 2em;
+  padding: 1em;
+  padding-bottom: 7em;
   position: relative;
 }
 .closeBtn {
@@ -67,6 +121,111 @@
 
     &:hover {
       font-size: 1.5em;
+    }
+  }
+}
+
+.butonAdauga {
+  position: absolute;
+  height: 5em;
+  width: 10em;
+  bottom: 0;
+  left: 50%;
+
+  transform: translate(-50%);
+  border-top-left-radius: 20%;
+  border-top-right-radius: 20%;
+  cursor: pointer;
+}
+.inp {
+  position: relative;
+  margin: auto;
+  width: 100%;
+  max-width: 280px;
+  border-radius: 3px;
+  overflow: hidden;
+  .label {
+    position: absolute;
+    top: 20px;
+    left: 12px;
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.5);
+    font-weight: 500;
+    transform-origin: 0 0;
+    transform: translate3d(0, 0, 0);
+    transition: all 0.2s ease;
+    pointer-events: none;
+  }
+  .focus-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.05);
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+  input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 100%;
+    border: 0;
+    font-family: inherit;
+    padding: 16px 12px 0 12px;
+    height: 56px;
+    font-size: 16px;
+    font-weight: 400;
+    background: rgba(0, 0, 0, 0.02);
+    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.3);
+    color: #000;
+    transition: all 0.15s ease;
+    &:hover {
+      background: rgba(0, 0, 0, 0.04);
+      box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.5);
+    }
+    &:not(:-moz-placeholder-shown) {
+      + {
+        .label {
+          color: rgba(0, 0, 0, 0.5);
+          transform: translate3d(0, -12px, 0) scale(0.75);
+        }
+      }
+    }
+    &:not(:-ms-input-placeholder) {
+      + {
+        .label {
+          color: rgba(0, 0, 0, 0.5);
+          transform: translate3d(0, -12px, 0) scale(0.75);
+        }
+      }
+    }
+    &:not(:placeholder-shown) {
+      + {
+        .label {
+          color: rgba(0, 0, 0, 0.5);
+          transform: translate3d(0, -12px, 0) scale(0.75);
+        }
+      }
+    }
+    &:focus {
+      background: rgba(0, 0, 0, 0.05);
+      outline: none;
+      box-shadow: inset 0 -2px 0 #0077ff;
+      + {
+        .label {
+          color: #0077ff;
+          transform: translate3d(0, -12px, 0) scale(0.75);
+          + {
+            .focus-bg {
+              transform: scaleX(1);
+              transition: all 0.1s ease;
+            }
+          }
+        }
+      }
     }
   }
 }
