--- a/components/formular/Nasi.module.scss
+++ b/components/formular/Nasi.module.scss
@@ -1,3 +1,11 @@
+$primary: #0077ff;
+$dark: #000;
+.dateNasi {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .nasi {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -6,22 +14,25 @@
 
   width: 100%;
   gap: 2em;
-
-  padding: 2em;
+  position: relative;
+  padding: 1em;
   text-align: center;
+  padding-bottom: 7em;
 }
 .nasiDoi {
   display: grid;
   grid-template-columns: 1fr;
   border: 4px dotted black;
-  width: 100%;
-  gap: 2em;
-  padding: 2em;
-  text-align: center;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 20em;
+  height: auto;
+  padding: 1em;
+  padding-bottom: 7em;
+  position: relative;
 }
 .pereche {
   display: grid;
-  position: relative;
 }
 
 .randFormular {
@@ -29,11 +40,24 @@
   flex-direction: column;
   align-items: center;
   padding: 0.5em;
-  border-bottom: 1px solid black;
+  position: relative;
+
   label {
     text-align: center;
     margin-bottom: 0.2em;
   }
+}
+.butonAdauga {
+  position: absolute;
+  height: 5em;
+  width: 10em;
+  bottom: 0;
+  left: 50%;
+
+  transform: translate(-50%);
+  border-top-left-radius: 20%;
+  border-top-right-radius: 20%;
+  cursor: pointer;
 }
 .closeBtn {
   position: absolute;
@@ -48,6 +72,105 @@
 
     &:hover {
       font-size: 1.5em;
+    }
+  }
+}
+
+.auCopii {
+  display: flex;
+  flex-direction: row;
+  padding: 0.5em;
+}
+
+.inp {
+  position: relative;
+  margin: auto;
+  width: 100%;
+  max-width: 280px;
+  border-radius: 3px;
+  overflow: hidden;
+  .label {
+    position: absolute;
+    top: 20px;
+    left: 12px;
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.5);
+    font-weight: 500;
+    transform-origin: 0 0;
+    transform: translate3d(0, 0, 0);
+    transition: all 0.2s ease;
+    pointer-events: none;
+  }
+  .focus-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.05);
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+  input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 100%;
+    border: 0;
+    font-family: inherit;
+    padding: 16px 12px 0 12px;
+    height: 56px;
+    font-size: 16px;
+    font-weight: 400;
+    background: rgba(0, 0, 0, 0.02);
+    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.3);
+    color: #000;
+    transition: all 0.15s ease;
+    &:hover {
+      background: rgba(0, 0, 0, 0.04);
+      box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.5);
+    }
+    &:not(:-moz-placeholder-shown) {
+      + {
+        .label {
+          color: rgba(0, 0, 0, 0.5);
+          transform: translate3d(0, -12px, 0) scale(0.75);
+        }
+      }
+    }
+    &:not(:-ms-input-placeholder) {
+      + {
+        .label {
+          color: rgba(0, 0, 0, 0.5);
+          transform: translate3d(0, -12px, 0) scale(0.75);
+        }
+      }
+    }
+    &:not(:placeholder-shown) {
+      + {
+        .label {
+          color: rgba(0, 0, 0, 0.5);
+          transform: translate3d(0, -12px, 0) scale(0.75);
+        }
+      }
+    }
+    &:focus {
+      background: rgba(0, 0, 0, 0.05);
+      outline: none;
+      box-shadow: inset 0 -2px 0 #0077ff;
+      + {
+        .label {
+          color: #0077ff;
+          transform: translate3d(0, -12px, 0) scale(0.75);
+          + {
+            .focus-bg {
+              transform: scaleX(1);
+              transition: all 0.1s ease;
+            }
+          }
+        }
+      }
     }
   }
 }
