adaugare mai multi coppi/nasi

--- a/components/eveniment/CasetaEveniment.module.scss
+++ b/components/eveniment/CasetaEveniment.module.scss
@@ -33,6 +33,7 @@
   background-color: transparent;
   box-shadow: none;
   border-color: gold;
+  border-radius: 10%;
   width: 23em;
   height: 10em;
 
