--- a/components/formular/nasi/Nasi.module.scss
+++ b/components/formular/nasi/Nasi.module.scss
@@ -80,6 +80,8 @@ $dark: #000;
   display: flex;
   flex-direction: row;
   padding: 0.5em;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .inp {
@@ -174,7 +176,15 @@ $dark: #000;
     }
   }
 }
-
+.copiiNasi {
+  display: flex;
+  padding: 0.2em;
+  align-items: center;
+  justify-content: space-between;
+  p {
+    padding: 1em;
+  }
+}
 @media (max-width: 768px) {
   .formularContainer {
     margin: 1em;
