--- a/components/formular/rudeStrainatate/RudeStrainatate.module.scss
+++ b/components/formular/rudeStrainatate/RudeStrainatate.module.scss
@@ -1,6 +1,10 @@
 .strainatateContainer {
   display: flex;
   flex-direction: column;
+  position: relative;
+  padding: 1em;
+  padding-bottom: 7em;
+  border: 1px solid black;
   //   input {
   //     height: 10em;
   //   }
@@ -9,7 +13,7 @@
 .inp {
   position: relative;
   margin: auto;
-  width: 100%;
+  width: 33%;
   max-width: 280px;
   border-radius: 3px;
   overflow: hidden;
@@ -98,8 +102,61 @@
     }
   }
 }
+.butonAdauga {
+  position: absolute;
+  height: 5em;
+  width: 10em;
+  bottom: 0;
+  left: 50%;
 
+  transform: translate(-50%);
+  border-top-left-radius: 20%;
+  border-top-right-radius: 20%;
+  cursor: pointer;
+}
+.closeBtn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  span {
+    font-size: 1.3em;
+    color: red;
+    font-weight: bold;
+
+    &:hover {
+      font-size: 1.5em;
+    }
+  }
+}
 .rudeInput {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: relative;
+  background-color: #f5f5f5;
+  padding: 1.5em;
+  width: 100%;
+  margin: 0.4em;
+}
+.aranjareSelect {
+  width: 33%;
+  padding: 1em;
+}
+
+@media (max-width: 768px) {
+  .rudeInput {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1em;
+  }
+  .aranjareSelect {
+    width: 100%;
+    padding: 0.4em;
+  }
+  .inp {
+    width: 100%;
+  }
 }
