--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -9,10 +9,41 @@
   padding: 20px;
   padding-left: 50px;
   padding-right: 50px;
-  background-color: #e91e63;
   z-index: 10000;
+  background-color: #ddfcf1;
+  transition: all 0.8s ease-in-out;
   top: 0;
 
+  a {
+    box-shadow: inset 0 0 0 0 #e91e63;
+    color: black;
+    margin: 0 -0.25rem;
+    padding: 0 0.25rem;
+    transition: color 2s ease-in-out, box-shadow 1s ease-in-out;
+    border-radius: 0.6em;
+    &:hover {
+      box-shadow: inset 100vw 0 0 0 #ddfcf1;
+      border-radius: 0.6em;
+      color: #e91e63;
+    }
+  }
+}
+.headerContainer2 {
+  display: flex;
+  flex-direction: row;
+  position: fixed;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 190px;
+  padding: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
+  z-index: 10000;
+  top: 0;
+  visibility: hidden;
+
+  transition: all 0.8s ease-in-out;
   a {
     box-shadow: inset 0 0 0 0 #e91e63;
     color: black;
