--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -10,9 +10,15 @@
   padding-left: 50px;
   padding-right: 50px;
   z-index: 10000;
-  background-color: #ddfcf1;
+
   transition: all 0.8s ease-in-out;
   top: 0;
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 
   a {
     box-shadow: inset 0 0 0 0 #e91e63;
