--- a/components/Main/Home.module.scss
+++ b/components/Main/Home.module.scss
@@ -1,3 +1,5 @@
+$size: 20px;
+
 .homeContainer {
   display: flex;
   flex-direction: column;
@@ -8,7 +10,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: auto;
+  height: 100vh;
   width: 100%;
 }
 
@@ -17,7 +19,7 @@
   position: relative;
   flex-direction: column;
   width: 100%;
-  height: auto;
+  height: 100vh;
 }
 
 .textIntro {
@@ -25,22 +27,31 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-color: antiquewhite;
-  width: 30%;
+
+  position: absolute;
+  bottom: 5%;
   border-radius: 1em;
   z-index: 10;
+  color: antiquewhite;
+  text-align: center;
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  h2 {
+    font-size: calc(1em + 2vw);
+    text-transform: uppercase;
+    font-style: italic;
+    letter-spacing: 0.05em;
+    font-family: "Avenir Next", sans-serif;
+    font-weight: 900;
+  }
 }
 
 @media (max-width: 768px) {
-  .homeContainer {
-    padding: 1em;
-  }
-  .secIntroducere {
-    flex-direction: column;
-    margin-top: 1em;
-  }
-
   .textIntro {
-    width: 100%;
+    bottom: 0;
   }
 }
