modificat stil menu-links animatie minima mobile friendly

--- a/components/Layout.module.scss
+++ b/components/Layout.module.scss
@@ -1,5 +1,6 @@
 .mainContent {
   margin-top: 140px;
+  max-width: 1920px;
 }
 
 .siteContent {
@@ -8,4 +9,5 @@
   width: 100%;
   height: auto;
   overflow: hidden;
+  align-items: center;
 }
