--- a/components/eveniment/CasetaEveniment.module.scss
+++ b/components/eveniment/CasetaEveniment.module.scss
@@ -12,7 +12,7 @@
 .cuBorder {
   display: flex;
   flex-direction: column;
-  border: 5px solid black;
+  border: 2px solid rgba(255, 255, 255, 0.15);
   max-width: 30em;
   margin-bottom: 35px;
   border-top-left-radius: 20px;
@@ -22,6 +22,10 @@
   text-align: center;
   position: relative;
   transition: border 200ms ease-in-out;
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
 }
 
 .noDisplay {
@@ -32,10 +36,14 @@
   cursor: pointer;
   background-color: transparent;
   box-shadow: none;
-  border-color: gold;
+  border-color: rgba(255, 255, 255, 0.15);
   border-radius: 10%;
   width: 23em;
   height: 10em;
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
 
   &:hover {
     h1 {
