blur header test

--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -16,8 +16,8 @@
   top: 0;
   background: rgba(255, 255, 255, 0.15);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(15px);
-  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(25px);
+  -webkit-backdrop-filter: blur(25px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
 
@@ -114,8 +114,8 @@
 .navLinks {
   background: rgba(255, 255, 255, 0.15);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(15px);
-  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(25px);
+  -webkit-backdrop-filter: blur(25px);
   border-top-left-radius: 5%;
   border-bottom-left-radius: 5%;
   padding: 1em;
@@ -125,12 +125,13 @@
 .dashLinks {
   background: rgba(255, 255, 255, 0.2);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(15px);
-  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(25px);
+  -webkit-backdrop-filter: blur(25px);
 
   border-top-right-radius: 5%;
   border-bottom-right-radius: 5%;
   padding: 1em;
+  height: 15em;
   font-size: 1em;
 }
 @media (max-width: 768px) {
