--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -7,8 +7,8 @@
   width: 100%;
   height: 140px;
   padding: 20px;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 10em;
+  padding-right: 10em;
   z-index: 10000;
   max-width: 1920px;
 
@@ -84,9 +84,8 @@
   justify-content: center;
   padding: 0px;
   z-index: 100;
-  gap: 1em;
 
-  top: 90%;
+  top: 88%;
 
   div {
     display: flex;
@@ -137,6 +136,8 @@
 @media (max-width: 768px) {
   .headerContainer {
     padding: 0.5em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
   }
   .headerContainer2 {
     height: 140px;
