--- a/pages/dashboard/admin/creati-un-eveniment/CreatiEveniment.module.scss
+++ b/pages/dashboard/admin/creati-un-eveniment/CreatiEveniment.module.scss
@@ -116,3 +116,103 @@
 .creatiEvenimentContainer {
   padding: 1em;
 }
+
+.containerButoane {
+  display: flex;
+  width: 100%;
+}
+
+.butonNextConfirmatiContainer {
+  button {
+    font-family: "Space Mono", monospace;
+    letter-spacing: 1px;
+    background: none;
+    color: white;
+    position: relative;
+    outline: none;
+    border: none;
+    height: 50px;
+    width: 18em;
+    font-size: 14px;
+    z-index: 2;
+    transition: 0.01s 0.23s ease-out all;
+    overflow: hidden;
+    &:before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 100%;
+      width: 55%;
+      background: #202020;
+      z-index: -1;
+      transition: 0.3s ease-in all;
+    }
+    &:after {
+      content: "";
+      position: absolute;
+      left: -5%;
+      top: 5%;
+      height: 90%;
+      width: 5%;
+      background: white;
+      z-index: -1;
+      transition: 0.4s 0.02s ease-in all;
+    }
+    &:hover {
+      cursor: pointer;
+      color: transparent;
+      &:before {
+        left: 100%;
+        width: 25%;
+      }
+      &:after {
+        left: 100%;
+        width: 70%;
+      }
+      .iconRight.after:after {
+        left: -80px;
+        color: white;
+        transition: 0.2s 0.2s ease all;
+      }
+      .iconRight.after:before {
+        left: -104px;
+        top: 14px;
+        opacity: 0.2;
+        color: white;
+      }
+    }
+  }
+}
+.iconRight {
+  position: absolute;
+  top: 0;
+  right: 0;
+  &:after {
+    font-family: "FontAwesome";
+    content: "\2192";
+    font-size: 24px;
+    display: inline-block;
+    position: relative;
+    top: 26px;
+    transform: translate3D(0, -50%, 0);
+  }
+  &.after:after {
+    left: -250px;
+    color: black;
+    transition: 0.15s 0.25s ease left, 0.5s 0.05s ease color;
+  }
+  &.after:before {
+    content: attr(data-before);
+    position: absolute;
+    left: -230px;
+    top: 14px;
+    opacity: 0;
+    transition: 0.2s ease-in all;
+  }
+}
+.containerButoane {
+  display: flex;
+  padding: 2em;
+  gap: 1em;
+}
