--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -12,8 +12,8 @@
   align-items: center;
 }
 .mainContentAdmin {
-  margin-left: 22em;
   min-height: 100vh;
+  display: grid;
 }
 
 @media (max-width: 768px) {
