--- a/components/googleMaps/directii/maps.module.scss
+++ b/components/googleMaps/directii/maps.module.scss
@@ -3,3 +3,18 @@
   width: 100%;
   height: 20em;
 }
+.infoHarta {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2em;
+  background-color: bisque;
+  border-bottom-right-radius: 50%;
+  border-top-right-radius: 50%;
+  hr {
+    width: 100%;
+  }
+  // padding-top: 3em;
+  // padding-bottom: 3em;
+}
