--- a/pages/dashboard/admin/program-azi/ProgramAzi.module.scss
+++ b/pages/dashboard/admin/program-azi/ProgramAzi.module.scss
@@ -1,6 +1,6 @@
 .programAziContainer {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
   gap: 1em;
   padding: 1em;
   text-align: center;
@@ -18,6 +18,10 @@
   border-radius: 10px;
   box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
 }
+.faraHarta {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
 
 .containerInformatii {
   display: flex;
@@ -26,9 +30,9 @@
   padding: 1em;
   border: 1px dotted white;
   margin: 1em;
-  width: 15em;
+  width: 12em;
 }
 
 .containerMapa {
-  width: 25em;
+  width: 100%;
 }
