--- a/components/header/admin/Menu.module.scss
+++ b/components/header/admin/Menu.module.scss
@@ -6,10 +6,11 @@
   position: fixed;
   left: 0;
   top: 0;
+  bottom: 0;
   background: #151515;
   text-align: center;
   width: 22em;
-  height: 100%;
+  height: 100vh;
   z-index: 1000;
 
   hr {
@@ -151,21 +152,18 @@
 .closedAdminMenu {
   display: none;
 }
-
-.openArrow {
+.arrowBackground {
   position: fixed;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  display: flex;
 
-  align-items: center;
-  background-color: #202020;
+  left: 0;
   opacity: 0.5;
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  background-color: gray;
+  z-index: 1000;
   width: 2em;
   cursor: pointer;
-  left: 0;
-
   &:hover {
     opacity: 0.8;
     .tooltiptext {
@@ -173,13 +171,13 @@
     }
   }
 }
+
 .tooltiptext {
   width: 120px;
   background-color: black;
   color: #fff;
   text-align: center;
   border-radius: 6px;
-
   visibility: hidden;
   /* Position the tooltip */
   position: absolute;
@@ -190,12 +188,6 @@
 .tooltip {
   position: relative;
   display: inline-block;
-
-  &:hover {
-    .tooltiptext {
-      visibility: visible;
-    }
-  }
 }
 
 @media (max-width: 768px) {
