--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -1,6 +1,40 @@
+.clientLayout {
+  background: #ffafbd; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ffc3a0,
+    #ffafbd
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ffc3a0,
+    #ffafbd
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  max-width: 1920px;
+}
+.adminLayout {
+  background: #0f2027; /* fallback for old browsers */
+  background: #0f0c29; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #24243e,
+    #302b63,
+    #0f0c29
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #24243e,
+    #302b63,
+    #0f0c29
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  max-width: 1920px;
+  color: white;
+  position: relative;
+  min-height: 100vh;
+}
+
 .mainContent {
   margin-top: 140px;
-  max-width: 1920px;
 }
 
 .siteContent {
@@ -14,6 +48,7 @@
 .mainContentAdmin {
   min-height: 100vh;
   display: grid;
+  margin-left: 2em;
 }
 
 @media (max-width: 768px) {
