--- a/pages/dashboard/admin/organizati-traseul/organizare.module.scss
+++ b/pages/dashboard/admin/organizati-traseul/organizare.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #202124;
 }
 
 .neconfirmateContainer {
@@ -12,26 +13,7 @@
   position: relative;
   padding: 3em;
 }
-.evenimentNeconfirmat {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  padding: 2em;
-  text-align: center;
-  border: 5px solid black;
-  border-radius: 1em;
 
-  hr {
-    width: 70%;
-    height: 0.2em;
-    color: rgb(218, 64, 64);
-  }
-}
-.containerMapa {
-  display: flex;
-  padding-top: 2em;
-  padding-bottom: 2em;
-}
 .firstInfo {
   display: flex;
   flex-direction: column;
@@ -39,7 +21,7 @@
   justify-content: space-between;
   padding: 0.5em;
   border-bottom: 5px dotted black;
-  height: 15em;
+  height: 20em;
 }
 
 @media (max-width: 768px) {
