errorcheck creati-eveniment

--- a/pages/dashboard/admin/creati-un-eveniment/CreatiEveniment.module.scss
+++ b/pages/dashboard/admin/creati-un-eveniment/CreatiEveniment.module.scss
@@ -104,7 +104,8 @@
 .creatiEveniment {
   display: flex;
   flex-direction: column;
-
+  width: 45em;
+  padding: 1em;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -117,6 +118,7 @@
 .evenimentCreat {
   display: flex;
   flex-direction: column;
+  width: 45em;
   box-shadow: rgba(0, 120, 0, 0.25) 0px 54px 55px,
     rgba(0, 120, 0, 0.12) 0px -12px 30px, rgba(0, 120, 0, 0.12) 0px 4px 6px,
     rgba(0, 120, 0, 0.17) 0px 12px 13px, rgba(0, 120, 0, 0.09) 0px -3px 5px;
@@ -234,6 +236,9 @@
   display: flex;
   padding: 2em;
   gap: 1em;
+}
+.errorText {
+  color: red;
 }
 @media (max-width: 768px) {
   .creatiEveniment {
