--- a/components/formular/eveniment/Eveniment.module.scss
+++ b/components/formular/eveniment/Eveniment.module.scss
@@ -110,7 +110,9 @@
     }
   }
 }
-
+.errorText {
+  color: red;
+}
 @media (max-width: 768px) {
   .dateEveniment {
     grid-template-columns: 1fr;
