--- a/pages/dashboard/admin/program/ProgramAzi.module.scss
+++ b/pages/dashboard/admin/program/ProgramAzi.module.scss
@@ -1,36 +1,32 @@
 .programAziContainer {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 1em;
-  padding: 1em;
+  gap: 3em;
+  padding: 2em;
   text-align: center;
   min-height: 90vh;
   position: relative;
 }
 
-.casetaProgramAzi {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 1em;
-  border: 5px solid black;
-  border-radius: 10px;
-  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
-}
 .faraHarta {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  gap: 0.5em;
 }
 
 .containerInformatii {
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
+  justify-content: center;
   padding: 1em;
-  border: 1px dotted white;
-  margin: 1em;
-  width: 12em;
+  border: 2px solid #202124;
+  width: 100%;
+  height: 210px;
+  h2 {
+    font-size: 18px;
+  }
 }
 .programContainer {
   display: flex;
@@ -40,4 +36,14 @@
 }
 .selectDate {
   width: 10em;
+}
+.cuTitle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.numarEveniment {
+  width: 20%;
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  border-bottom: 0;
 }
