adauga ursitoare transformat din pagina in componenta adaugata la organizarti traseul

--- a/components/eveniment/CasetaEveniment.module.scss
+++ b/components/eveniment/CasetaEveniment.module.scss
@@ -37,7 +37,8 @@
   background-color: transparent;
   box-shadow: none;
   border-color: rgba(255, 255, 255, 0.15);
-  border-radius: 10%;
+  border-top-left-radius: 10%;
+  border-top-right-radius: 10%;
   width: 23em;
   height: 10em;
   background: rgba(255, 255, 255, 0.15);
