--- a/components/admin/organizati-traseul/modifica.module.scss
+++ b/components/admin/organizati-traseul/modifica.module.scss
@@ -19,14 +19,19 @@
   }
 }
 .oraContainer {
-  position: relative;
+  display: flex;
+
   padding-top: 2em;
   button {
-    background-color: #31437177;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    right: 50%;
+    transform: translateX(-50%);
+    background-color: #46aef7;
     padding: 1em;
     cursor: pointer;
-    border-radius: 1000px;
-    box-shadow: none;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
 
     &:hover {
       background-color: #46aef7;
@@ -36,7 +41,10 @@
 .closeButton {
   position: absolute;
   right: 0;
-  top: 0;
+  top: 50%;
+  bottom: 50%;
+  margin-right: 10px;
+  translate: transformY(-50%);
   color: rgba(255, 0, 0, 0.534);
   font-weight: bold;
   cursor: pointer;
@@ -60,5 +68,11 @@
 
   &:hover {
     font-size: 22px;
+  }
+}
+
+@media (max-width: 768px) {
+  .adaugOra {
+    flex-direction: column;
   }
 }
