--- a/components/spinner/Spinner.module.scss
+++ b/components/spinner/Spinner.module.scss
@@ -2,14 +2,14 @@
   border: 10px solid #f3f3f3;
   border-top: 10px solid #3498db;
   border-radius: 50%;
-  width: 80px;
-  height: 80px;
+  width: 100%;
+  height: auto;
   animation: spin 1s linear infinite;
 }
 .loaderContainer {
   display: flex;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height:  auto;
   align-items: center;
   justify-content: center;
   position: relative;
