--- a/pages/dashboard/admin/program/ProgramAzi.module.scss
+++ b/pages/dashboard/admin/program/ProgramAzi.module.scss
@@ -21,7 +21,8 @@
   align-items: center;
   justify-content: center;
   padding: 1em;
-  border: 2px solid #202124;
+  position: relative;
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   width: 100%;
   height: 210px;
   h2 {
@@ -45,5 +46,16 @@
 .numarEveniment {
   width: 20%;
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
   border-bottom: 0;
+}
+
+@media (max-width: 768px) {
+  .programAziContainer {
+    grid-template-columns: 1fr;
+  }
+  .faraHarta {
+    grid-template-columns: 1fr 1fr;
+  }
 }
