--- a/pages/dashboard/admin/creati-un-eveniment/CreatiEveniment.module.scss
+++ b/pages/dashboard/admin/creati-un-eveniment/CreatiEveniment.module.scss
@@ -125,6 +125,11 @@
 .errorText {
   color: red;
 }
+
+.formularCreazaSingur {
+  width: 30em;
+  height: 20em;
+}
 @media (max-width: 768px) {
   .creatiEveniment {
     width: 17em;
